Thu Sep  5 02:17:06 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_divrem_normal): Add GC guards.

Thu Sep  5 00:38:32 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_divrem_normal): New function.

	* internal.h (rb_big_divrem_normal): Declared.

	* ext/-test-/bignum/div.c: New file.

	* test/-ext-/bignum/test_div.rb: New file.

Thu Sep  5 00:08:44 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_normal): Removed.
	  (bary_divmod_normal): New function.
	  (bary_divmod): Use bary_divmod_normal.
	  (bigdivrem): Use bary_divmod_normal.

Wed Sep  4 23:02:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Useless declaration removed.

Wed Sep  4 22:56:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (NUM_STEP_GET_INF): split from NUM_STEP_SCAN_ARGS(), since
	  inf is not used in num_step_size().

Wed Sep  4 20:22:43 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_normal): Add assertions.

Wed Sep  4 19:18:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (vm_state_version_t): prefer LONG_LONG to uint64_t.

Wed Sep  4 16:28:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (vm_state_version_t): use uint64_t when it is larger than
	  LONG_LONG, and fallback to unsigned long.

Wed Sep  4 15:37:05 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf8_mac-tbl.rb: fix r42789.
	  Fix conversion table and logic. [ruby-dev:47680]

Wed Sep  4 14:08:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* class.c, compile.c, eval.c, gc.h, insns.def, internal.h, method.h,
	  variable.c, vm.c, vm_core.c, vm_insnhelper.c, vm_insnhelper.h,
	  vm_method.c: Implement class hierarchy method cache invalidation.

	  [ruby-core:55053] [Feature #8426] [GH-387]

Wed Sep  4 11:13:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_gsub): use BEG(0) for whole matched position not
	  return value from rb_reg_search(), for \K matching.
	  [ruby-dev:47694] [Bug #8856]
